# FNAFplus

./: CMakeLists.txt
include/: Animatronic.h  Game.h  Office.h  Renderer.h
src/: Animatronic.cpp  Game.cpp  Office.cpp  Renderer.cpp  main.cpp
